<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kpgsoftworks.apps.todaysbiblereading.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/view_result"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xlg_text_view_height"
        android:background="@drawable/rounded_corners"
        android:paddingLeft="@dimen/layout_margin_small"
        android:paddingRight="@dimen/layout_margin_small">

        <TextView
            android:id="@+id/reading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/read_intro"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />
    </LinearLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/butttonRow1"
            android:layout_margin="0dip">

            <Button
                android:id="@+id/button_01"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_teal"
                android:onClick="onClick"
                android:tag="0"
                android:text="@string/January" />

            <Button
                android:id="@+id/button_02"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_teal"
                android:onClick="onClick"
                android:tag="1"
                android:text="@string/February" />

            <Button
                android:id="@+id/button_03"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_teal"
                android:onClick="onClick"
                android:tag="2"
                android:text="@string/March" />
        </TableRow>

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/butttonRow2"
            android:layout_margin="0dip">

            <Button
                android:id="@+id/button_04"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_teal"
                android:onClick="onClick"
                android:tag="3"
                android:text="@string/April" />

            <Button
                android:id="@+id/button_05"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_teal"
                android:onClick="onClick"
                android:tag="4"
                android:text="@string/May" />

            <Button
                android:id="@+id/button_06"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_teal"
                android:onClick="onClick"
                android:tag="5"
                android:text="@string/June" />
        </TableRow>

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/butttonRow3"
            android:layout_margin="0dip">

            <Button
                android:id="@+id/button_07"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_teal"
                android:onClick="onClick"
                android:tag="6"
                android:text="@string/July" />

            <Button
                android:id="@+id/button_08"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_teal"
                android:onClick="onClick"
                android:tag="7"
                android:text="@string/August" />

            <Button
                android:id="@+id/button_09"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_teal"
                android:onClick="onClick"
                android:tag="8"
                android:text="@string/September" />
        </TableRow>

        <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/butttonRow4"
            android:layout_margin="0dip">

            <Button
                android:id="@+id/button_10"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_teal"
                android:onClick="onClick"
                android:tag="9"
                android:text="@string/October" />

            <Button
                android:id="@+id/button_11"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_teal"
                android:onClick="onClick"
                android:tag="10"
                android:text="@string/November" />

            <Button
                android:id="@+id/button_12"
                style="@style/ButtonText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_teal"
                android:onClick="onClick"
                android:tag="11"
                android:text="@string/December" />
        </TableRow>
    </TableLayout>
</LinearLayout>
